/*
Copyright 2019 The KubeCarrier Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package kubecarrier.api.v1;
option go_package = "v1";

import "google/api/annotations.proto";

import "types.proto";
import "meta.proto";

message Offering {
  ObjectMeta objectMeta = 1;
  OfferingSpec spec = 2;
}

message OfferingSpec {
  OfferingMetadata metadata = 1;
  ObjectReference provider = 2;
  CRDInformation crd = 3;
}

message OfferingMetadata {
  string displayName = 1;
  string description = 2;
}

message OfferingList {
  ListMeta listMeta = 1;
  repeated Offering items = 2;
}

message OfferingGetRequest {
  string name = 1;
  string account = 2;
}

message OfferingListRequest {
  string account = 1;
  string labelSelector = 2;
  int64 limit = 3;
  string continue = 4;
}

service OfferingService {
  rpc List(OfferingListRequest) returns (OfferingList) {
    option (google.api.http) = {
      get : "/v1/accounts/{account}/offerings"
    };
  };
  rpc Get(OfferingGetRequest) returns (Offering) {
    option (google.api.http) = {
      get : "/v1/accounts/{account}/offerings/{name}"
    };
  };
}
